fix: fix keyboard overflow for smaller viewport

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,3 +1,4 @@
+// ----- Colors -------
 $color-keyboard: hsl(0deg 0% 88%);
 $color-keyboard-inner: hsl(0deg 0% 41%);
 $color-key-text: hsl(219deg 81% 33%);
@@ -6,3 +7,6 @@ $color-key-base: hsl(0deg 0% 88%);
 $color-key-base-active: hsl(205deg 46% 27%);
 $color-key-top: hsl(0deg 0% 96%);
 $color-key-top-active: hsl(205deg 46% 34%);
+
+// ----- Spacing ------
+$app-row-gap: 60px;
