--- a/scss/components/_input-field.scss
+++ b/scss/components/_input-field.scss
@@ -1,4 +1,7 @@
+@use "scss/abstracts/variables" as *;
+
 .input-field {
   width: 400px;
   height: 100px;
+  margin: auto auto $app-row-gap auto;
 }
