--- a/scss/layout/_app.scss
+++ b/scss/layout/_app.scss
@@ -1,9 +1,6 @@
 .app {
   display: flex;
   flex-direction: column;
-  gap: 60px;
-  justify-content: center;
-  align-items: center;
   width: 100%;
   height: 100%;
   min-height: 100vh;
